2008-04-08  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: VirtualPath used in PhysicalToVirtual.

	* BuildManager.cs: switched to VirtualPath instead of a string
	path in several methods.
	Batch compilation is turned off if we have a custom
	VirtualPathProvider which implements only the VirtualFile and
	falls back to DefaultVirtualDirectory implementation for directory
	access.

	* GenericBuildProvider.cs: AddCodeFile accepts a virtual path.

	* BuildProvider.cs: SetVirtualPath accepts a VirtualPath now.

	* AssemblyBuilder.cs: constructors use the new VirtualPath class
	now.
	AddCodeFile can use the VirtualPathProvider if necessary now.
	BuildAssembly overloads accept VirtualPath parameter instead of a
	string path now.

	* TemplateBuildProvider.cs: GetCodeBehindSource returns the
	virtual path now.

2008-03-31  Marek Habersack  <mhabersack@novell.com>

	* AppCodeCompiler.cs: implemented support for AppInitialize (a
	static method in any class defined in the App_Code source files),
	ran just after the App_Code assemblies are compiled in order to
	perform any application initialization actions.

2008-03-27  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: AssertVirtualPathExists now queries the
	VirtualPathProvider for path existence if physical path check
	fails, before throwing the 404 exception.

2008-03-13  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: if we're running in a case-insensitive
	environment, use case-insensitive comparer for the build caches. 

2008-02-29  Marek Habersack  <mhabersack@novell.com>

	* BuildManager.cs: implement a mechanism to ignore certain virtual
	paths when batch compiling. Helps applications which may have
	.as?x files which won't work on mono for various reasons (one such
	sample is mojoportal).

2008-02-28  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: make sure that data-bound attribute
	assignments properly convert the Bind expression to the Eval